--- a/templates/root.html
+++ b/templates/root.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     {% if title %}
-        <title> Flask Blog - {{ title }} </title>
+        <title> Flask Blog Site - {{ title }} </title>
     {% else %}
         <title> Flask Blog </title>
     {% endif %}
@@ -31,7 +31,7 @@
             
             <div class="container">
             
-                <a class="navbar-brand mr-4" href="/">Flask Blog</a>
+                <a class="navbar-brand mr-4" href="/"> Flask Blog Site </a>
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
