--- a/templates/root.html
+++ b/templates/root.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<!-- https://github.com/CoreyMSchafer/code_snippets/tree/master/Python/Flask_Blog -->
 
 <html lang="en">
 
@@ -67,7 +68,20 @@
         <div class="row">
 
             <div class="col-md-8">
-                {% block content %}{% endblock %}
+
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ category }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+
+                {% block content %}
+                {% endblock %}
+
             </div>
 
             <div class="col-md-4">
