--- a/templates/registar.html
+++ b/templates/registar.html
@@ -48,7 +48,7 @@
                     
                     {{ form.password.label(class="form-control-label") }}
 
-                    {% if form.password.error %}
+                    {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.password.errors %}
@@ -65,7 +65,7 @@
                     
                     {{ form.confirm_password.label(class="form-control-label") }}
                     
-                    {% if form.confirm_password.error %}
+                    {% if form.confirm_password.errors %}
                         {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.confirm_password.errors %}
