--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@
         <div class="border-top pt-3">
 
             <small class="text-muted">
-                Need an account? <a class="ml-2" href=" {{ url_for('registration') }} "> Signup Now </a>
+                Need an account? <a class="ml-2" href=" {{ url_for('register') }} "> Signup Now </a>
             </small>
 
         </div>
