--- a/templates/root.html
+++ b/templates/root.html
@@ -41,14 +41,14 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                 
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="/">Home</a>
-                        <a class="nav-item nav-link" href="/about">About</a>
+                        <a class="nav-item nav-link" href=" {{ url_for('index') }} "> Home </a>
+                        <a class="nav-item nav-link" href=" {{ url_for('about') }} "> About </a>
                     </div>
                     
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="/login">Login</a>
-                        <a class="nav-item nav-link" href="/register">Register</a>
+                        <a class="nav-item nav-link" href=" {{ url_for('login') }} "> Login </a>
+                        <a class="nav-item nav-link" href=" {{ url_for('register') }} "> Register </a>
                     </div>
         
                 </div>
