--- a/flaskblog/templates/user_posts.html
+++ b/flaskblog/templates/user_posts.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+    <h1 class="mb-3"> Posts by {{ user.username }} ({{ posts.total }}) </h1>
+
     {% for post in posts.items %}
     <article class="media content-section">
 
@@ -29,9 +31,9 @@
     {% for page_num in posts.iter_pages( left_edge=2, right_edge=2, left_current=1, right_current=1 ) %}
         {% if page_num %}
             {% if posts.page == page_num %}
-                <a class="btn btn-sm btn-info mb-4" href="{{ url_for('index', page=page_num) }}"> {{ page_num }} </a>
+                <a class="btn btn-sm btn-info mb-4" href="{{ url_for('user_posts', username=user.username, page=page_num) }}"> {{ page_num }} </a>
             {% else %}
-                <a class="btn btn-sm btn-outline-info mb-4" href="{{ url_for('index', page=page_num) }}"> {{ page_num }} </a>
+                <a class="btn btn-sm btn-outline-info mb-4" href="{{ url_for('user_posts',  username=user.username, page=page_num) }}"> {{ page_num }} </a>
             {% endif %}
         {% else %}
             <a class="btn btn-sm mb-4" href="#"> .... </a>
