--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -11,12 +11,12 @@
         <div class="media-body">
 
             <div class="article-metadata">
-                <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+                <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%y') }}</small>
             </div>
 
             <h2>
-                <a class="article-title" href="{{ url_for('post', post_id=post.id) }}"> {{ post.title }} </a>
+                <a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}"> {{ post.title }} </a>
             </h2>
 
             <p class="article-content"> {{ post.content }} </p>
@@ -29,9 +29,9 @@
     {% for page_num in posts.iter_pages( left_edge=2, right_edge=2, left_current=1, right_current=1 ) %}
         {% if page_num %}
             {% if posts.page == page_num %}
-                <a class="btn btn-sm btn-info mb-4" href="{{ url_for('index', page=page_num) }}"> {{ page_num }} </a>
+                <a class="btn btn-sm btn-info mb-4" href="{{ url_for('main.index', page=page_num) }}"> {{ page_num }} </a>
             {% else %}
-                <a class="btn btn-sm btn-outline-info mb-4" href="{{ url_for('index', page=page_num) }}"> {{ page_num }} </a>
+                <a class="btn btn-sm btn-outline-info mb-4" href="{{ url_for('main.index', page=page_num) }}"> {{ page_num }} </a>
             {% endif %}
         {% else %}
             <a class="btn btn-sm mb-4" href="#"> .... </a>
