--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -50,11 +50,11 @@
                 </div>
 
                 <div class="form-group mt-2">
-                    {{ form.login(class="btn btn-outline-info") }}
+                    {{ form.submit(class="btn btn-outline-info") }}
                 </div>
 
                 <small class="text-muted ml-2 m">
-                    <a href="{{ url_for('reset_request') }}"> Forget Password? </a>
+                    <a href="{{ url_for('users.reset_request') }}"> Forget Password? </a>
                 </small>
 
             </fieldset>
@@ -66,7 +66,7 @@
         <div class="border-top pt-3">
 
             <small class="text-muted">
-                Need an account? <a class="ml-2" href=" {{ url_for('register') }} "> Signup Now </a>
+                Need an account? <a class="ml-2" href=" {{ url_for('users.register') }} "> Signup Now </a>
             </small>
 
         </div>
