--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -10,11 +10,11 @@
         <div class="media-body">
 
             <div class="article-metadata">
-                <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+                <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%y') }}</small>
                 {% if post.author == current_user %}
                     <div>
-                        <a href="{{ url_for('update_post', post_id=post.id) }}" class="btn btn-primary btn-sm mt-1 mb-1"> Update </a>
+                        <a href="{{ url_for('posts.update_post', post_id=post.id) }}" class="btn btn-primary btn-sm mt-1 mb-1"> Update </a>
                         <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal"> Delete </button>
                     </div>
                 {% endif %}
@@ -42,7 +42,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal"> Cancel </button>
-            <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+            <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
                 <input type="submit" class="btn btn-danger btn-sm m-1" value="Delete Post" />
             </form>
           </div>
